<resources>
    <string name="app_name">Calendar</string>
    <string name="left_arrow"><![CDATA[<-]]></string>
    <string name="right_arrow"><![CDATA[->]]></string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="sun">SUN</string>
</resources>